--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Taskinator</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <!-- Begin Header Section-->
     <header>
@@ -14,9 +16,19 @@
         <p>Click the button below to add a new task!</p>
         <form id="task-form">
             <div class="form-group">
-                <input type="text" name="task-name" placeholder="Enter Task Name" />
+                <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name" />
+            </div>
+            <div class="form-group">
+                <select name="task-type" class="select-dropdown">
+                    <option value="" disabled selected>Pick a task type</option>
+                    <option value="Print">Print</option>
+                    <option value="Web">Web</option>
+                    <option value="Mobile">Mobile</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <button class="btn" id="save-task">Add Task</button>
-                </div>
+            </div>
         </form>
 
     </header>
@@ -25,14 +37,14 @@
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do">
-                
+
             </ul>
 
         </section>
 
 
     </main>
-    
+
 
     <!--Begin Footer Section-->
     <footer>
@@ -40,4 +52,5 @@
     </footer>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
