--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
       <div class="form-group">
-        <input type="text" name="task-name" placeholder="Enter Task Name" />
+        <input type="text" id="task-name" name="task-name" placeholder="Enter Task Name" />
       </div>
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
@@ -32,7 +32,7 @@
     </form>
   </header>
 
-  <main class="page-content">
+  <main class="page-content" id="page-content">
     <!-- Tasks To Do-->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
